manifests/cloud-tool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-tool
  labels:
    app: cloud-tool
spec:
  selector:
    matchLabels:
      app: cloud-tool
  replicas: 2
  template:
    metadata:
      labels:
        app: cloud-tool
    spec:
      containers:
        - name: cloud-tool
          image: naildocker/cloud-tool:0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
