manifests/cloud-tool-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-tool-service
spec:
  type: LoadBalancer
  selector:
    app: cloud-tool
  ports:
    - port: 80
      targetPort: 80
